welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:2: error: type yellow is not a member of object java.awt.Color
if (getCouleurSol():Color.yellow) {
                          ^