welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.code
if (getCouleurSol():Color.yellow) {
	avance();
}

